--- a/scss/grid_codes.html
+++ b/scss/grid_codes.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>grid_start_end</title>
-  <link rel="stylesheet" href="grid_start_end.css">
+  <title>grid_codes</title>
+  <link rel="stylesheet" href="grid_codes.css">
 </head>
 <body>
   <div class="father">
