--- a/scss/grid_codes.html
+++ b/scss/grid_codes.html
@@ -8,57 +8,23 @@
   <link rel="stylesheet" href="grid_codes.css">
 </head>
 <body>
-  <div class="father">
+  <h1>auto-fill</h1>
+  <div class="grid first"> 
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
     <div class="item">4</div>
     <div class="item">5</div>
     <div class="item">6</div>
-    <div class="item">7</div>
-    <div class="item">8</div>
-    <div class="item">9</div>
-    <div class="item">10</div>
-    <div class="item">11</div>
-    <div class="item">12</div>
-    <div class="item">13</div>
-    <div class="item">14</div>
-    <div class="item">15</div>
-    <div class="item">16</div>
-    <div class="item">17</div>
-    <div class="item">18</div>
-    <div class="item">19</div>
-    <div class="item">20</div>
-    <div class="item">21</div>
-    <div class="item">22</div>
-    <div class="item">23</div>
-    <div class="item">24</div>
-    <div class="item">25</div>
-    <div class="item">26</div>
-    <div class="item">27</div>
-    <div class="item">28</div>
-    <div class="item">29</div>
-    <div class="item">30</div>
-    <div class="item">31</div>
-    <div class="item">32</div>
-    <div class="item">33</div>
-    <div class="item">34</div>
-    <div class="item">35</div>
-    <div class="item">36</div>
-    <div class="item">37</div>
-    <div class="item">38</div>
-    <div class="item">39</div>
-    <div class="item">40</div>
-    <div class="item">41</div>
-    <div class="item">42</div>
-    <div class="item">43</div>
-    <div class="item">44</div>
-    <div class="item">45</div>
-    <div class="item">46</div>
-    <div class="item">47</div>
-    <div class="item">48</div>
-    <div class="item">49</div>
-    <div class="item">50</div>  
+  </div>
+  <h1>auto-fit</h1>
+  <div class="grid second"> 
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
   </div>
 </body>
 </html>
