min-content: 내용이 깨지지 않는 최소 크기, max-content: 내용이한줄에 다 나오는 크기

--- a/scss/grid_codes.html
+++ b/scss/grid_codes.html
@@ -10,21 +10,13 @@
 <body>
   <h1>auto-fill</h1>
   <div class="grid first"> 
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
-    <div class="item">4</div>
-    <div class="item">5</div>
-    <div class="item">6</div>
-  </div>
-  <h1>auto-fit</h1>
-  <div class="grid second"> 
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
-    <div class="item">4</div>
-    <div class="item">5</div>
-    <div class="item">6</div>
+    <div class="item">Short text</div>
+    <div class="item">Long long long text</div>
+    <div class="item">really really really really really really long text</div>
+    <div class="item">really really really really really really long text really really really really really really long text</div>
+    <div class="item">Long long long text</div>
+    <div class="item">Short text</div>
+    <div class="item">A</div>
   </div>
 </body>
 </html>
